--- a/02Lecture/02-mario.ipynb
+++ b/02Lecture/02-mario.ipynb
@@ -89,7 +89,6 @@
     "from gym_super_mario_bros.actions import SIMPLE_MOVEMENT\n",
     "# Import Frame Stacker Wrapper and GrayScaling Wrapper\n",
     "from gym.wrappers import GrayScaleObservation # less data to process \n",
-    "# Import Vectorization Wrappers\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv # transform the model to pass\n",
     "# Import Matplotlib to show the impact of frame stacking\n",
     "from matplotlib import pyplot as plt"
@@ -505,317 +504,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28002bb9-e6ac-425c-85f8-208a95c30a7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# log multiple models\n",
+    "import os\n",
+    "\n",
+    "class TrainAndLoggingCallback(BaseCallback):\n",
+    "\n",
+    "    def __init__(self, check_freq, save_path, verbose=1):\n",
+    "        super(TrainAndLoggingCallback, self).__init__(verbose)\n",
+    "        self.check_freq = check_freq\n",
+    "        self.save_path = save_path\n",
+    "\n",
+    "    def _init_callback(self):\n",
+    "        if self.save_path is not None:\n",
+    "            os.makedirs(self.save_path, exist_ok=True)\n",
+    "\n",
+    "    def _on_step(self):\n",
+    "        if self.n_calls % self.check_freq == 0:\n",
+    "            model_path = os.path.join(self.save_path, 'best_model_{}'.format(self.n_calls))\n",
+    "            self.model.save(model_path)\n",
+    "\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10edc11a-48b7-4c48-b331-9a30218a39d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback = TrainAndLoggingCallback(check_freq=50000, save_path=\"training/models\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1b8b8b40-6644-4c8d-b833-88114bdaee14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logging to training/Logs/PPO_7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/mario2/lib/python3.8/site-packages/gym_super_mario_bros/smb_env.py:148: RuntimeWarning: overflow encountered in scalar subtract\n",
-      "  return (self.ram[0x86] - self.ram[0x071c]) % 256\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----------------------------\n",
-      "| time/              |     |\n",
-      "|    fps             | 80  |\n",
-      "|    iterations      | 1   |\n",
-      "|    time_elapsed    | 6   |\n",
-      "|    total_timesteps | 512 |\n",
-      "----------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 12            |\n",
-      "|    iterations           | 2             |\n",
-      "|    time_elapsed         | 81            |\n",
-      "|    total_timesteps      | 1024          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 1.1687633e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | -0.000866     |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 152           |\n",
-      "|    n_updates            | 10            |\n",
-      "|    policy_gradient_loss | -6.1e-05      |\n",
-      "|    value_loss           | 341           |\n",
-      "-------------------------------------------\n",
-      "------------------------------------------\n",
-      "| time/                   |              |\n",
-      "|    fps                  | 9            |\n",
-      "|    iterations           | 3            |\n",
-      "|    time_elapsed         | 157          |\n",
-      "|    total_timesteps      | 1536         |\n",
-      "| train/                  |              |\n",
-      "|    approx_kl            | 8.364208e-05 |\n",
-      "|    clip_fraction        | 0            |\n",
-      "|    clip_range           | 0.2          |\n",
-      "|    entropy_loss         | -1.95        |\n",
-      "|    explained_variance   | 0.00824      |\n",
-      "|    learning_rate        | 1e-06        |\n",
-      "|    loss                 | 38.6         |\n",
-      "|    n_updates            | 20           |\n",
-      "|    policy_gradient_loss | -0.000772    |\n",
-      "|    value_loss           | 80.4         |\n",
-      "------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 8             |\n",
-      "|    iterations           | 4             |\n",
-      "|    time_elapsed         | 229           |\n",
-      "|    total_timesteps      | 2048          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 0.00011815445 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | 0.171         |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.14          |\n",
-      "|    n_updates            | 30            |\n",
-      "|    policy_gradient_loss | -0.000902     |\n",
-      "|    value_loss           | 1.62          |\n",
-      "-------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 8             |\n",
-      "|    iterations           | 5             |\n",
-      "|    time_elapsed         | 303           |\n",
-      "|    total_timesteps      | 2560          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.2397027e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | 0.0621        |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.14          |\n",
-      "|    n_updates            | 40            |\n",
-      "|    policy_gradient_loss | -0.000274     |\n",
-      "|    value_loss           | 1.29          |\n",
-      "-------------------------------------------\n",
-      "------------------------------------------\n",
-      "| time/                   |              |\n",
-      "|    fps                  | 8            |\n",
-      "|    iterations           | 6            |\n",
-      "|    time_elapsed         | 376          |\n",
-      "|    total_timesteps      | 3072         |\n",
-      "| train/                  |              |\n",
-      "|    approx_kl            | 7.080543e-05 |\n",
-      "|    clip_fraction        | 0            |\n",
-      "|    clip_range           | 0.2          |\n",
-      "|    entropy_loss         | -1.95        |\n",
-      "|    explained_variance   | -0.000485    |\n",
-      "|    learning_rate        | 1e-06        |\n",
-      "|    loss                 | 197          |\n",
-      "|    n_updates            | 50           |\n",
-      "|    policy_gradient_loss | 0.000384     |\n",
-      "|    value_loss           | 384          |\n",
-      "------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 7             |\n",
-      "|    time_elapsed         | 451           |\n",
-      "|    total_timesteps      | 3584          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.1584914e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | 0.0404        |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 88            |\n",
-      "|    n_updates            | 60            |\n",
-      "|    policy_gradient_loss | -4.19e-05     |\n",
-      "|    value_loss           | 120           |\n",
-      "-------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 8             |\n",
-      "|    time_elapsed         | 527           |\n",
-      "|    total_timesteps      | 4096          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.5705784e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | 0.192         |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.23          |\n",
-      "|    n_updates            | 70            |\n",
-      "|    policy_gradient_loss | 2.3e-05       |\n",
-      "|    value_loss           | 2.79          |\n",
-      "-------------------------------------------\n",
-      "------------------------------------------\n",
-      "| time/                   |              |\n",
-      "|    fps                  | 7            |\n",
-      "|    iterations           | 9            |\n",
-      "|    time_elapsed         | 601          |\n",
-      "|    total_timesteps      | 4608         |\n",
-      "| train/                  |              |\n",
-      "|    approx_kl            | 2.009573e-05 |\n",
-      "|    clip_fraction        | 0            |\n",
-      "|    clip_range           | 0.2          |\n",
-      "|    entropy_loss         | -1.95        |\n",
-      "|    explained_variance   | -0.0423      |\n",
-      "|    learning_rate        | 1e-06        |\n",
-      "|    loss                 | 0.0834       |\n",
-      "|    n_updates            | 80           |\n",
-      "|    policy_gradient_loss | -0.000106    |\n",
-      "|    value_loss           | 1.9          |\n",
-      "------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 10            |\n",
-      "|    time_elapsed         | 676           |\n",
-      "|    total_timesteps      | 5120          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 1.9370113e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.95         |\n",
-      "|    explained_variance   | 0.0782        |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.159         |\n",
-      "|    n_updates            | 90            |\n",
-      "|    policy_gradient_loss | -6.28e-05     |\n",
-      "|    value_loss           | 1.26          |\n",
-      "-------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 11            |\n",
-      "|    time_elapsed         | 751           |\n",
-      "|    total_timesteps      | 5632          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 1.8719235e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.94         |\n",
-      "|    explained_variance   | -0.0349       |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.134         |\n",
-      "|    n_updates            | 100           |\n",
-      "|    policy_gradient_loss | -8.84e-05     |\n",
-      "|    value_loss           | 0.839         |\n",
-      "-------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 12            |\n",
-      "|    time_elapsed         | 826           |\n",
-      "|    total_timesteps      | 6144          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.8662616e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.94         |\n",
-      "|    explained_variance   | -0.00984      |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.087         |\n",
-      "|    n_updates            | 110           |\n",
-      "|    policy_gradient_loss | -0.000186     |\n",
-      "|    value_loss           | 0.557         |\n",
-      "-------------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 13            |\n",
-      "|    time_elapsed         | 902           |\n",
-      "|    total_timesteps      | 6656          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.1578046e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.94         |\n",
-      "|    explained_variance   | -0.0101       |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.163         |\n",
-      "|    n_updates            | 120           |\n",
-      "|    policy_gradient_loss | -0.000175     |\n",
-      "|    value_loss           | 0.515         |\n",
-      "-------------------------------------------\n",
-      "------------------------------------------\n",
-      "| time/                   |              |\n",
-      "|    fps                  | 7            |\n",
-      "|    iterations           | 14           |\n",
-      "|    time_elapsed         | 976          |\n",
-      "|    total_timesteps      | 7168         |\n",
-      "| train/                  |              |\n",
-      "|    approx_kl            | 1.385971e-05 |\n",
-      "|    clip_fraction        | 0            |\n",
-      "|    clip_range           | 0.2          |\n",
-      "|    entropy_loss         | -1.94        |\n",
-      "|    explained_variance   | -0.00584     |\n",
-      "|    learning_rate        | 1e-06        |\n",
-      "|    loss                 | 0.0839       |\n",
-      "|    n_updates            | 130          |\n",
-      "|    policy_gradient_loss | -0.000226    |\n",
-      "|    value_loss           | 0.361        |\n",
-      "------------------------------------------\n",
-      "-----------------------------------------\n",
-      "| time/                   |             |\n",
-      "|    fps                  | 7           |\n",
-      "|    iterations           | 15          |\n",
-      "|    time_elapsed         | 1052        |\n",
-      "|    total_timesteps      | 7680        |\n",
-      "| train/                  |             |\n",
-      "|    approx_kl            | 2.75505e-05 |\n",
-      "|    clip_fraction        | 0           |\n",
-      "|    clip_range           | 0.2         |\n",
-      "|    entropy_loss         | -1.94       |\n",
-      "|    explained_variance   | -0.00982    |\n",
-      "|    learning_rate        | 1e-06       |\n",
-      "|    loss                 | 0.188       |\n",
-      "|    n_updates            | 140         |\n",
-      "|    policy_gradient_loss | -0.000294   |\n",
-      "|    value_loss           | 0.375       |\n",
-      "-----------------------------------------\n",
-      "-------------------------------------------\n",
-      "| time/                   |               |\n",
-      "|    fps                  | 7             |\n",
-      "|    iterations           | 16            |\n",
-      "|    time_elapsed         | 1129          |\n",
-      "|    total_timesteps      | 8192          |\n",
-      "| train/                  |               |\n",
-      "|    approx_kl            | 2.7924543e-05 |\n",
-      "|    clip_fraction        | 0             |\n",
-      "|    clip_range           | 0.2           |\n",
-      "|    entropy_loss         | -1.94         |\n",
-      "|    explained_variance   | 0.00362       |\n",
-      "|    learning_rate        | 1e-06         |\n",
-      "|    loss                 | 0.15          |\n",
-      "|    n_updates            | 150           |\n",
-      "|    policy_gradient_loss | -0.000318     |\n",
-      "|    value_loss           | 0.227         |\n",
-      "-------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the AI model, this is where the AI model starts to learn\n",
-    "model.learn(total_timesteps=10000)"
+    "model.learn(total_timesteps=100000, callback=callback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "fef4ef2e-3f9d-416b-840c-be0fdacd2e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save my model\n",
+    "\n",
+    "model.save(\"training/models/PPO_100k_Mario\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "27fccb93-925a-4518-bcc0-329f418e54a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "1f1e935d-2ca7-49c3-9cd8-79108d33b2af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = PPO.load(\"training/models/PPO_100k_Mario\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "db078054-e7ca-4851-bea9-ed2a2e4fe6b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TEST THE MODEL\n",
+    "\n",
+    "# Start the game \n",
+    "state = env.reset()\n",
+    "# Loop through the game\n",
+    "while True: \n",
+    "    \n",
+    "    action, _ = model.predict(state)\n",
+    "    state, reward, done, info = env.step(action)\n",
+    "    env.render()\n",
+    "\n",
+    "# reward how far it can go the right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ea4f717-59ce-4610-af2f-839860d22e92",
    "metadata": {},
    "outputs": [],
    "source": []
