--- a/03Lecture/01-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/01-street-fighter-setup-live-coding.ipynb
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8b1c2e82-93ee-41e0-a788-4ecd12ab5732",
    "metadata": {},
    "outputs": [
@@ -1274,6 +1274,26 @@
       "500.0\n",
       "500.0\n",
       "500.0\n",
+      "500.0\n",
+      "1000.0\n",
+      "500.0\n",
+      "1500.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "100.0\n",
+      "1000.0\n",
+      "1000.0\n",
+      "10000.0\n",
+      "100.0\n",
+      "100.0\n",
+      "500.0\n",
+      "300.0\n",
       "500.0\n"
      ]
     }
@@ -1298,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "3e63bfb2-c808-411c-b23c-b6e85cf7a13b",
    "metadata": {},
    "outputs": [
@@ -1310,10 +1330,10 @@
        " 'enemy_health': 0,\n",
        " 'health': 0,\n",
        " 'matches_won': 0,\n",
-       " 'score': 37200}"
+       " 'score': 27400}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,13 +1344,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9294a261-895e-4b37-8531-bb246fabb24d",
    "metadata": {},
    "outputs": [],
    "source": [
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c674bca3-9856-4e16-adb4-b1ed55e5f09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gym import Env\n",
+    "from gym.spaces import MultiBinary, Box\n",
+    "import numpy as np # to calculate the delta between the frames\n",
+    "import cv2 # for grayscaling\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c4ed2736-7704-4bb0-8857-044ceaaf2261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating custom environment that will carry out all the steps\n",
+    "# we pass our pass environment\n",
+    "\n",
+    "class StreetFighter(Env): \n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # Specify action space and observation space \n",
+    "        # resizing and making gray scale\n",
+    "        self.observation_space = Box(low=0, high=255, shape=(84, 84, 1), dtype=np.uint8) \n",
+    "        self.action_space = MultiBinary(12)\n",
+    "        # Startup and instance of the game \n",
+    "        # additional parameter to filter only valid actions\n",
+    "        self.game = retro.make(game='StreetFighterIISpecialChampionEdition-Genesis', use_restricted_actions=retro.Actions.FILTERED)\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        # Return the first frame \n",
+    "        obs = self.game.reset()\n",
+    "        obs = self.preprocess(obs) \n",
+    "        self.previous_frame = obs # want to also keep track of the previous frame to calculate a delta between the frames\n",
+    "        \n",
+    "        # Create a attribute to hold the score delta \n",
+    "        self.score = 0 \n",
+    "        return obs\n",
+    "    \n",
+    "    def preprocess(self, observation): \n",
+    "        # Grayscaling \n",
+    "        gray = cv2.cvtColor(observation, cv2.COLOR_BGR2GRAY)\n",
+    "        # Resize \n",
+    "        resize = cv2.resize(gray, (84,84), interpolation=cv2.INTER_CUBIC)\n",
+    "        # Add the channels value\n",
+    "        channels = np.reshape(resize, (84,84,1))\n",
+    "        return channels \n",
+    "    \n",
+    "    def step(self, action): \n",
+    "        # Take a step \n",
+    "        obs, reward, done, info = self.game.step(action)\n",
+    "        obs = self.preprocess(obs) \n",
+    "        \n",
+    "        # Frame delta - use this to train our agent\n",
+    "        frame_delta = obs - self.previous_frame\n",
+    "        self.previous_frame = obs \n",
+    "        \n",
+    "        # Reshape the reward function\n",
+    "        reward = info['score'] - self.score \n",
+    "        self.score = info['score'] \n",
+    "        \n",
+    "        return frame_delta, reward, done, info\n",
+    "    \n",
+    "    def render(self, *args, **kwargs):\n",
+    "        self.game.render()\n",
+    "        \n",
+    "    def close(self):\n",
+    "        self.game.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6c0629e6-d469-474e-b9dd-df9db052b893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = StreetFighter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b62a4bf2-7974-4193-abc2-526bc26d042d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Box([[[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]\n",
+       "\n",
+       " [[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]\n",
+       "\n",
+       " [[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]\n",
+       "\n",
+       " ...\n",
+       "\n",
+       " [[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]\n",
+       "\n",
+       " [[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]\n",
+       "\n",
+       " [[0]\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  ...\n",
+       "  [0]\n",
+       "  [0]\n",
+       "  [0]]], [[[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]\n",
+       "\n",
+       " [[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]\n",
+       "\n",
+       " [[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]\n",
+       "\n",
+       " ...\n",
+       "\n",
+       " [[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]\n",
+       "\n",
+       " [[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]\n",
+       "\n",
+       " [[255]\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  ...\n",
+       "  [255]\n",
+       "  [255]\n",
+       "  [255]]], (84, 84, 1), uint8)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.observation_space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5a93a648-4823-45d9-b48d-504047243bba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1], dtype=int8)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "29ef55d7-918f-42cb-8425-1a240a723bef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-06-08 10:57:12.378 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7fabaf4db2a0>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 10:57:12.379 python[12151:36719507] Warning: Expected min height of view: (<NSButton: 0x7faba8c5bf00>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 10:57:12.383 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7faba8b71100>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 10:57:12.385 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7faba8b77330>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "1000\n",
+      "500\n",
+      "500\n",
+      "300\n",
+      "300\n",
+      "300\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m env\u001b[38;5;241m.\u001b[39mrender()\n\u001b[1;32m     11\u001b[0m obs, reward, done, info \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(env\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39msample()) \u001b[38;5;66;03m# randomly take action\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m reward \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(reward)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "obs = env.reset() # Reset game to starting state\n",
+    "\n",
+    "done = False # Set flag to flase, tells us when we dies\n",
+    "for game in range(1): # play one game \n",
+    "    while not done: \n",
+    "        if done: \n",
+    "            obs = env.reset() # when we do die, we start the game again\n",
+    "        env.render()\n",
+    "        obs, reward, done, info = env.step(env.action_space.sample()) # randomly take action\n",
+    "        time.sleep(0.01)\n",
+    "        if reward > 0:\n",
+    "            print(reward) # only a number when win, no rewards when getting along which makes it hard to train rl agent - sparse rewards\n",
+    "        # need to change this, as the spare rewards will make it hard to train the rl agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d9f5d2-4a5c-4011-82b2-e06bfee34236",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
