--- a/03Lecture/01-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/01-street-fighter-setup-live-coding.ipynb
@@ -1354,6 +1354,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "67043a47-9134-4d4a-9bd8-a3b6fdcdb4cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#! pip3 install opencv-python==4.6.0.66"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "c674bca3-9856-4e16-adb4-b1ed55e5f09e",
    "metadata": {},
