--- a/03Lecture/01-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/01-street-fighter-setup-live-coding.ipynb
@@ -1376,6 +1376,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce9468b6-8a75-46be-b159-1fee5b991625",
+   "metadata": {},
+   "source": [
+    "Next steps to preprocess the environment\n",
+    "- Observation Preprocess - grayscale, frame delta, resize the frame so we have less pixels\n",
+    "- Filter the action - parameter \n",
+    "- Reward function - set this to the score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "c4ed2736-7704-4bb0-8857-044ceaaf2261",
@@ -1646,8 +1657,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "02d9f5d2-4a5c-4011-82b2-e06bfee34236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a05619c2-6ed6-4a15-b77c-cf0217872cdb",
    "metadata": {},
    "outputs": [],
    "source": []
