--- a/03Lecture/01-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/01-street-fighter-setup-live-coding.ipynb
@@ -1396,6 +1396,8 @@
     "# Creating custom environment that will carry out all the steps\n",
     "# we pass our pass environment\n",
     "\n",
+    "# Code reference: https://github.com/nicknochnack/StreetFighterRL\n",
+    "\n",
     "class StreetFighter(Env): \n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -1668,7 +1670,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62b98ec8-5ea0-41d7-9b12-db3b42c17707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip3 install stable-baselines3==1.7.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "a05619c2-6ed6-4a15-b77c-cf0217872cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from stable_baselines3 import PPO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a1681c40-cf76-42a3-a7df-e69a95256a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "Wrapping the env in a VecTransposeImage.\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = StreetFighter() # to create our preprocessed environment\n",
+    "model = PPO(\"CnnPolicy\", env, verbose=1) # creating the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c45a3050-2544-430d-8185-08e6a0fd4235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------\n",
+      "| time/              |      |\n",
+      "|    fps             | 311  |\n",
+      "|    iterations      | 1    |\n",
+      "|    time_elapsed    | 6    |\n",
+      "|    total_timesteps | 2048 |\n",
+      "-----------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<stable_baselines3.ppo.ppo.PPO at 0x7fabf11240d0>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train the AI model on n steps\n",
+    "\n",
+    "timesteps = 1000\n",
+    "model.learn(total_timesteps=timesteps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c9f243a9-9bfd-4db7-8c7e-a99395b8e83a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the model\n",
+    "model.save(f\"training/models/PPO_{timesteps}_SF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "38295290-0feb-471d-9c92-86c17cb108d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce75adcd-f47e-478a-b770-4c1fad6f5845",
    "metadata": {},
    "outputs": [],
    "source": []
