--- a/03Lecture/01-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/01-street-fighter-setup-live-coding.ipynb
@@ -1679,6 +1679,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "42c7d6a6-7060-4eb2-af42-1d1e588540a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip3 install torch torchvision"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "a05619c2-6ed6-4a15-b77c-cf0217872cdb",
    "metadata": {},
@@ -1769,11 +1779,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "02d0c360-e5bf-4f29-92a0-173e7f235071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ce75adcd-f47e-478a-b770-4c1fad6f5845",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/street-fighter/lib/python3.8/site-packages/stable_baselines3/common/evaluation.py:67: UserWarning: Evaluation environment is not wrapped with a ``Monitor`` wrapper. This may result in reporting modified episode lengths and rewards, if other wrappers happen to modify these. Consider wrapping environment first with ``Monitor`` wrapper.\n",
+      "  warnings.warn(\n",
+      "2024-06-08 11:17:59.155 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7fabad280340>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 11:17:59.156 python[12151:36719507] Warning: Expected min height of view: (<NSButton: 0x7fabad63ae10>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 11:17:59.159 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7fabad63dbd0>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2024-06-08 11:17:59.161 python[12151:36719507] Warning: Expected min height of view: (<NSPopoverTouchBarItemButton: 0x7fabad643870>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluate the model\n",
+    "from stable_baselines3.common.evaluation import evaluate_policy\n",
+    "\n",
+    "# create environment\n",
+    "env = StreetFighter()\n",
+    "model = PPO.load(f\"training/models/PPO_1000_SF\")\n",
+    "mean_reward, _ = evaluate_policy(model, env, render=True, n_eval_episodes=5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708968ed-da99-45ff-b873-65a502987b7a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mean_reward"
+   ]
   }
  ],
  "metadata": {
