--- a/03Lecture/0-street-fighter-setup-live-coding.ipynb
+++ b/03Lecture/0-street-fighter-setup-live-coding.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "71f8d659-e894-4acb-89ed-82162fa64f59",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -61,7 +63,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "56ce58f6-6683-4fef-bc94-aef7beac4876",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1243,7 +1247,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8b1c2e82-93ee-41e0-a788-4ecd12ab5732",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1464,7 +1470,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "b62a4bf2-7974-4193-abc2-526bc26d042d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2102,7 +2110,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "14817e3e-e8d2-4baa-80c6-e279f4dfcbd4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2278,7 +2288,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "73e6ad0c-aa2a-417b-a2ee-8b42a9bf3e0a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2375,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "2a83c06b-cbb4-4e20-ba5e-14aa9f574876",
    "metadata": {},
    "outputs": [
@@ -2569,6 +2581,60 @@
       "|    policy_gradient_loss | -0.0083      |\n",
       "|    value_loss           | 145          |\n",
       "------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-06-08 12:12:56,282] Trial 3 finished with value: 0.0 and parameters: {'n_steps': 562, 'learning_rate': 2.359283929931024e-05}. Best is trial 1 with value: 1600.0.\n",
+      "/opt/miniconda3/envs/street-fighter/lib/python3.8/site-packages/stable_baselines3/ppo/ppo.py:145: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 735`, after every 11 untruncated mini-batches, there will be a truncated mini-batch of size 31\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=735 and n_envs=1)\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cpu device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "Wrapping the env in a VecTransposeImage.\n",
+      "Logging to training/Logs/PPO_27\n",
+      "----------------------------\n",
+      "| time/              |     |\n",
+      "|    fps             | 294 |\n",
+      "|    iterations      | 1   |\n",
+      "|    time_elapsed    | 2   |\n",
+      "|    total_timesteps | 735 |\n",
+      "----------------------------\n",
+      "------------------------------------------\n",
+      "| time/                   |              |\n",
+      "|    fps                  | 93           |\n",
+      "|    iterations           | 2            |\n",
+      "|    time_elapsed         | 15           |\n",
+      "|    total_timesteps      | 1470         |\n",
+      "| train/                  |              |\n",
+      "|    approx_kl            | 0.0009957528 |\n",
+      "|    clip_fraction        | 0            |\n",
+      "|    clip_range           | 0.2          |\n",
+      "|    entropy_loss         | -8.32        |\n",
+      "|    explained_variance   | -0.00117     |\n",
+      "|    learning_rate        | 1.11e-05     |\n",
+      "|    loss                 | 1.61e+04     |\n",
+      "|    n_updates            | 10           |\n",
+      "|    policy_gradient_loss | -0.00116     |\n",
+      "|    value_loss           | 1.2e+04      |\n",
+      "------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2024-06-08 12:15:10,664] Trial 4 finished with value: 4500.0 and parameters: {'n_steps': 735, 'learning_rate': 1.114058628197845e-05}. Best is trial 4 with value: 4500.0.\n"
      ]
     }
    ],
