--- a/03Lecture/01-street-fighter-setup.ipynb
+++ b/03Lecture/01-street-fighter-setup.ipynb
@@ -2006,7 +2006,7 @@
    "id": "b140e808-cde3-4930-ae0c-2f0a693fa22d",
    "metadata": {},
    "source": [
-    "Next steps to preprocess the environment\n",
+    "**Next steps to preprocess the environment**\n",
     "- Observation Preprocess - grayscale, frame delta, resize the frame so we have less pixels\n",
     "- Filter the action - parameter \n",
     "- Reward function - set this to the score"
@@ -2257,14 +2257,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0db816a5-9a2a-421d-a16e-649a7a2374e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "id": "d5d98436-9dba-42da-95bb-7403202b612f",
    "metadata": {},
@@ -2380,7 +2372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
